# Dropbox-source

./: .gitignore  .travis.yml  NOTASDESARROLLO  README  script_librerias.sh
Cliente/app/: build.gradle
Cliente/app/src/main/: AndroidManifest.xml
Cliente/app/src/main/res/drawable/: circle.xml  rectangle.xml
Cliente/app/src/main/res/layout/: activity_documents.xml  activity_file_options.xml  activity_main.xml  activity_signup.xml  activity_user_details.xml  prompt_input.xml
Cliente/app/src/main/res/menu/: menu_documents.xml  menu_file_options.xml  menu_signup.xml  menu_user_details.xml
Cliente/gradle/wrapper/: gradle-wrapper.properties
Documentacion/Administrador/: index.html  search.html  searchindex.js
Documentacion/Administrador/_sources/: index.txt
Documentacion/Proyecto/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
Documentacion/Proyecto/.doctrees/: environment.pickle  index.doctree
Documentacion/Proyecto/_sources/: index.txt
Documentacion/Tecnica/: .buildinfo  genindex.html  index.html  searchindex.js
Documentacion/Tecnica/.doctrees/: environment.pickle  index.doctree
Documentacion/Tecnica/_sources/: index.txt
Documentacion/Usuario/: .buildinfo  index.html  searchindex.js
Documentacion/Usuario/.doctrees/: environment.pickle  index.doctree
Documentacion/Usuario/_sources/: index.txt
Servidor/: .cproject  .gitignore  CMakeLists.txt  server.config
Servidor/dockerbuild/: Dockerfile
Servidor/dockertravisbuild/: Dockerfile
Servidor/src/: Servidor.cpp
Servidor/src/entities/: File.cpp  File.h  FileContent.cpp  FileContent.h  Token.cpp  Token.h  User.cpp  User.h
Servidor/src/log/: Log.cpp  Log.h
Servidor/src/mongoose/: FileHandler.cpp  FileHandler.h  MongooseHandler.cpp  MongooseHandler.h  UserHandler.cpp  UserHandler.h
Servidor/src/rocksDb/: RocksDb.cpp  RocksDb.h  RocksdbHandler.cpp  RocksdbHandler.h
Servidor/testing/: AllTests.cpp  TestFileContent.cpp  TestFileContent.h  TestFileHandler.cpp  TestFileHandler.h  TestFiles.cpp  TestFiles.h  TestToken.cpp  TestToken.h  TestUserHandler.cpp  TestUserHandler.h  TestUsers.cpp  TestUsers.h
(+15 files in other folders)
